# API_Com_FASTAPI_Utilizando_TDD

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
store/schemas/: base.py
store/usecases/: product.py
tests/: conftest.py
tests/controllers/: test_product.py
tests/schemas/: factories.py  test_product.py
tests/usecases/: test_product.py
