[tool.poetry]
name = "tdd-fastapi"
version = "0.0.1"
description = "Uma simples api utilizando o conceito TDD"
authors = ["fdtschmitz <fdtschmitz.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
motor = "^3.3.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
